fixing wrapping issues

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ p {
     display: block;
     width: 800px;
     height: auto;
-    word-break: break-all;
+    word-break: normal;
     word-wrap: normal;
     white-space: normal;
 }
@@ -131,7 +131,7 @@ p {
 #outputGapTextUnderData {
     font-size: x-large;
     word-wrap: normal;
-    word-break: break-all;
+    word-break: normal;
     white-space: normal;
 }
 
@@ -158,7 +158,7 @@ p {
     text-align: justify;
     word-wrap: normal;
     white-space: normal;
-    word-break: break-all;
+    word-break: normal;
 }
 
 .collapsible {
